Revert "Added java-concurrency-examples submodule"
This reverts commit 7e5bb06128494e75f22f179d97881496865c14c5.